🚀 AVANCEMENT : Ajout de l'image ent haut (fond) sur page index, et ajustement.

--- a/about.html
+++ b/about.html
@@ -74,8 +74,8 @@
                 <div class="row">
                     <div class="col-4 text-center">
                         <h1 class="h3 fw-bold text-white">Suscribe</h1>
-                        <form class="d-block mx-auto" action="." method="post">
-                            <input type="email" name="email" id="email" placeholder="Insert your e-mail here">
+                        <form class="input-group" action="." method="post" style="width: 50%; margin:auto;">
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Insert your e-mail here">
                             <input type="submit" value="send">
                         </form>
                     </div>
@@ -110,6 +110,7 @@
             </p>
         </div>
     </footer>
+
 </body>
 
 </html>
