--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
             </div>
         </nav>
     </header>
+    <div class="d-none d-md-flex flex-column justify-content-center align-items-center top">
+        <h1 class="fw-bold text-white text-shadow h">[EVENTS]... YOUR GATEWAY TO CONNECT WITH EVENTS AROUND ARREA</h1>
+        <div class="card bg-white p-4 bg-opacity-75 mt-4">
+            <h6 class="text-center mb-3">SEARCH EVENTS NEARBY </h6>
+            <form action="." class="input-group">
+                <input type="text" class="form-control" placeholder="Inser your location here">
+                <input class="input-group-btn bg-prim text-white fw-bold" type="submit" value="Search">
+            </form>
+        </div>
+        <a href="#" class="btn fw-bold bg-white bg-opacity-75 mt-4">How It Work</a>
+    </div>
 
     <!-- Main-->
 
@@ -74,8 +85,8 @@
                 <div class="row">
                     <div class="col-4 text-center">
                         <h1 class="h3 fw-bold text-white">Suscribe</h1>
-                        <form class="d-block mx-auto" action="." method="post">
-                            <input type="email" name="email" id="email" placeholder="Insert your e-mail here">
+                        <form class="input-group" action="." method="post" style="width: 50%; margin:auto;">
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Insert your e-mail here">
                             <input type="submit" value="send">
                         </form>
                     </div>
