👌 AMELIORATION :  Correction du contenu, résponsivté.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <input class="bg-prim text-white fw-bold border-0 rounded" type="submit" value="Search" />
             </form>
         </div>
-        <a href="#" class="btn fw-bold bg-white bg-opacity-75 mt-4">How It Work</a>
+        <a href="#" class="btn fs-5 fs-md-4 fw-bold bg-white bg-opacity-75 mt-4">How It Work</a>
     </div>
 
     <!-- Main-->
@@ -148,10 +148,9 @@
                 <!-- Titre Mobile version -->
                 <h4 class="fw-bold d-block d-md-none">[Events] connecting you</h4>
 
-                <a href="./about.html" class="btn bg-md-white fw-bold text-gray2 rounded-0">
-					learn more about [Events]</a>
+                <a href="./about.html" class="btn bg-md-white fw-bold text-gray2 rounded-0">Learn more about [Events]</a>
             </div>
-            <img class="d-none d-md-block rounded-circle groupr-i" src="./Assets/Images/group-3.jpg" alt="Events image" />
+            <img class="d-none d-md-block rounded-circle groupr-i" src="./Assets/Images/group-4.jpg" alt="Events image" />
         </div>
 
         <div class="d-flex align-items-center justify-content-between bg-pblue text-white p-3 p-md-5 order-3">
@@ -164,7 +163,7 @@
                 <!-- Titre Mobile version -->
                 <h4 class="fw-bold d-block d-md-none">[Events] spreding love</h4>
             </div>
-            <img class="d-none d-md-block rounded-circle groupr-i" src="./Assets/Images/group-4.jpg" alt="Events image" />
+            <img class="d-none d-md-block rounded-circle groupr-i" src="./Assets/Images/group-3.jpg" alt="Events image" />
         </div>
     </div>
 
@@ -247,7 +246,7 @@
                 </ul>
             </nav>
 
-            <p class="text-lgray m-0 px-5">
+            <p class="text-lgray m-0 pe-2">
                 &copy; 2020 [event], Inc. All rights reserved
             </p>
         </div>
